--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ dependencies:
   pie_chart: ^5.3.2
   dropdown_search: ^5.0.6
   email_validator: ^2.1.17
+  flutter_native_image: ^0.0.6+1
+  shimmer: ^2.0.0
+  path: ^1.8.3
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
