--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   shimmer: ^2.0.0
   path: ^1.8.3
   path_provider: ^2.0.14
+  webview_flutter: ^4.2.0
 
 dev_dependencies:
   flutter_test:
