--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.0.14
   webview_flutter: ^4.2.0
+  fancy_drawer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
